hphp/test/slow/packages/requirepackage/parse_errors/parse_errors5.php.inc
<?hh

<<__SoftRequirePackage(42)>>
function epe() : void {}
